i#97680, fdo#43152: Load this file without crashing.

The document contains invalid sheet names.  We check it on load, sees
it invalid, decide not to append sheet.  The next time the importer
tries to put cell data into it thinking the sheet has already been
created, the sheet instance is not there, and it crashes.

The solution I used is to go ahead and append new sheet with a default
name in case the supplied sheet name is invalid.